# App-tauri_sync-save-game

./: .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/agents/: rust-mentor.agent.md  tauri2-fullstack.agent.md
.github/instructions/: build-release-updater.instructions.md  frontend-ui.instructions.md  google-drive-sso.instructions.md  sync-service.instructions.md  tracking-auto-sync-workflow.instructions.md
.github/prompts/: auth-logic.prompt.md  generate-be-fe-service-api.prompt.md  sync-local-drive-logic.prompt.md
.github/workflows/: release.yml
Game processing sync/: package.json
scripts/: generate-icons.mjs
src/: App.css  App.tsx  main.tsx  utils.ts
src-tauri/: .env.example  .gitignore  2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: admin.rs  detection.rs  devices.rs  drive_mgmt.rs  firestore.rs  gdrive.rs  gdrive_auth.rs  http_client.rs  lib.rs  main.rs  models.rs  settings.rs  sync.rs  tray.rs  watcher.rs
src/components/: AddGameCard.tsx  AdminGuard.tsx  AppLayout.tsx  AuthGuard.tsx  ConfirmModal.tsx  DetailPanel.tsx  DriveFilesSection.tsx  GameSettingsForm.tsx  GameThumbnail.tsx  GamesList.tsx  HeroCard.tsx  LauncherCard.tsx  SaveFileTree.tsx  Toast.tsx  VersionBackupsSection.tsx  styles.ts
src/pages/: AdminPage.tsx  DashboardPage.tsx  DevicesPage.tsx  GameDetailPage.tsx  LoginPage.tsx  SettingsPage.tsx
src/queries/: admin.ts  appUpdate.ts  auth.ts  dashboard.ts  detail.ts  devices.ts  (+4 more)
(+20 files in other folders)
