[package]
name = "game-processing-sync"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "game_processing_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
open = "5"
urlencoding = "2"
fastrand = "2"
tokio = { version = "1", features = ["rt"] }
tauri-plugin-google-auth = "0.5"
notify = "8"
notify-debouncer-mini = "0.6"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

